--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "link": "^0.1.5",
     "react": "17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "^0.65.1",
     "react-native-elements": "^3.4.2",
+    "react-native-link": "^4.1.0",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
