--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "link": "^0.1.5",
     "react": "17.0.2",
     "react-native": "^0.65.1",
@@ -17,8 +19,10 @@
     "react-native-link": "^4.1.0",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
