--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@digieggs/rn-country-code-picker": "^1.2.0",
+    "@islacel/react-native-country-picker-modal": "^2.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "link": "^0.1.5",
     "react": "17.0.2",
     "react-native": "^0.65.1",
+    "react-native-country-codes-picker": "^1.2.3",
     "react-native-elements": "^3.4.2",
     "react-native-link": "^4.1.0",
     "react-native-paper": "^4.9.2",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "rn-country-picker": "0.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
