--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "link": "^0.1.5",
     "react": "17.0.2",
     "react-native": "^0.65.1",
+    "react-native-country-code-list": "^1.1.2",
     "react-native-country-codes-picker": "^1.2.3",
     "react-native-elements": "^3.4.2",
     "react-native-link": "^4.1.0",
