--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "link": "^0.1.5",
+    "lodash.filter": "^4.6.0",
     "react": "17.0.2",
     "react-native": "^0.65.1",
     "react-native-country-code-list": "^1.1.2",
     "react-native-country-codes-picker": "^1.2.3",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-elements": "^3.4.2",
+    "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-link": "^4.1.0",
     "react-native-paper": "^4.9.2",
     "react-native-phone-number-input": "^2.1.0",
@@ -39,7 +42,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
-    "react-native-codegen": "^0.0.7",
+    "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
