--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@islacel/react-native-country-picker-modal": "^2.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "formik": "^2.2.9",
     "link": "^0.1.5",
     "lodash.filter": "^4.6.0",
     "react": "17.0.2",
@@ -32,7 +33,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
-    "rn-country-picker": "0.0.12"
+    "rn-country-picker": "0.0.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
