--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@islacel/react-native-country-picker-modal": "^2.0.5",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "formik": "^2.2.9",
@@ -22,9 +23,12 @@
     "react-native-country-code-list": "^1.1.2",
     "react-native-country-codes-picker": "^1.2.3",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-date-picker": "^4.1.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-link": "^4.1.0",
+    "react-native-modal-datetime-picker": "^11.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
