DOB_added_using_datepicker_with_selected_date_display

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "formik": "^2.2.9",
     "link": "^0.1.5",
     "lodash.filter": "^4.6.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
+    "react-moment": "^1.1.1",
     "react-native": "^0.65.1",
     "react-native-country-code-list": "^1.1.2",
     "react-native-country-codes-picker": "^1.2.3",
