--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "formik": "^2.2.9",
+    "google-libphonenumber": "^3.2.24",
     "link": "^0.1.5",
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.1",
@@ -38,6 +39,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-phone-number-input": "^3.1.34",
     "react-redux": "^7.2.5",
     "rn-country-picker": "0.0.12",
     "yup": "^0.32.9"
