--- a/ios/PBX/Info.plist
+++ b/ios/PBX/Info.plist
@@ -82,5 +82,38 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb412844750359488</string>
+    </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>412844750359488</string>
+  <key>FacebookClientToken</key>
+  <string>30b599483a9ffa4476aa15ad3d0d432e</string>
+  <key>FacebookDisplayName</key>
+  <string>PBX</string>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fbapi20130214</string>
+    <string>fbapi20130410</string>
+    <string>fbapi20130702</string>
+    <string>fbapi20131010</string>
+    <string>fbapi20131219</string>
+    <string>fbapi20140410</string>
+    <string>fbapi20140116</string>
+    <string>fbapi20150313</string>
+    <string>fbapi20150629</string>
+    <string>fbapi20160328</string>
+    <string>fbauth</string>
+    <string>fb-messenger-share-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
 </dict>
 </plist>
