--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,8 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
+pod 'GoogleSignIn' #added recently
+
 target 'PBX' do
   config = use_native_modules!
 
@@ -23,9 +25,9 @@ target 'PBX' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+ use_flipper!()
 
-  post_install do |installer|
-    react_native_post_install(installer)
-  end
+ post_install do |installer|
+   react_native_post_install(installer)
+ end
 end
