--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-date-picker": "^4.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-link": "^4.1.0",
     "react-native-modal-datetime-picker": "^11.0.0",
