--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-link": "^4.1.0",
+    "react-native-localize": "^2.1.5",
     "react-native-modal-datetime-picker": "^11.0.0",
     "react-native-otp-textinput": "0.0.8",
     "react-native-paper": "^4.9.2",
