--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@islacel/react-native-country-picker-modal": "^2.0.5",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "google-libphonenumber": "^3.2.24",
     "link": "^0.1.5",
@@ -43,7 +46,10 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-phone-number-input": "^3.1.34",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.0",
     "rn-country-picker": "0.0.12",
     "yup": "^0.32.9"
   },
