--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        googlePlayServicesVersion = "16.1.0" // default: "+"
+        firebaseVersion = "17.3.4" // default: "+"
         buildToolsVersion = "30.0.2"
         minSdkVersion = 21
         compileSdkVersion = 30
@@ -14,6 +16,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.1")
+        classpath ('com.google.gms:google-services:4.3.10')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
