--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.93.0
+ firebaseMessagingVersion=21.1.0
+
+
+
