--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@islacel/react-native-country-picker-modal": "^2.0.5",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/messaging": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -40,6 +44,7 @@
     "react-native-otp-textinput": "0.0.8",
     "react-native-paper": "^4.9.2",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
