--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@islacel/react-native-country-picker-modal": "^2.0.5",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/messaging": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
