--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@islacel/react-native-country-picker-modal": "^2.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/messaging": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -24,6 +27,7 @@
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.1",
     "react": "17.0.2",
+    "react-devtools": "^4.21.0",
     "react-moment": "^1.1.1",
     "react-native": "^0.65.1",
     "react-native-country-code-list": "^1.1.2",
