--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-phone-number-input": "^3.1.34",
     "react-redux": "^7.2.5",
+    "redux-saga": "^1.1.3",
     "rn-country-picker": "0.0.12",
     "yup": "^0.32.9"
   },
