--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-moment": "^1.1.1",
     "react-native": "^0.65.1",
+    "react-native-bootsplash": "^4.0.0",
     "react-native-country-code-list": "^1.1.2",
     "react-native-country-codes-picker": "^1.2.3",
     "react-native-country-picker-modal": "^2.0.0",
