--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,8 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation project(':react-native-push-notification')
 
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
