--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-otp-textinput": "0.0.8",
     "react-native-paper": "^4.9.2",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
