--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.1.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-device-info": "^8.4.8",
     "react-native-elements": "^3.4.2",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flatlist-alphabet": "^1.1.2",
