--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@islacel/react-native-country-picker-modal": "^2.0.5",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "formik": "^2.2.9",
@@ -44,6 +45,7 @@
     "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-phone-number-input": "^3.1.34",
     "react-redux": "^7.2.5",
