--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-date-picker": "^4.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^8.4.8",
-    "react-native-elements": "^3.4.2",
+    "react-native-elements": "git+https://github.com/react-native-elements/react-native-elements.git#dist",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-link": "^4.1.0",
