--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "google-libphonenumber": "^3.2.24",
     "link": "^0.1.5",
+    "lodash": "^4.17.21",
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.1",
     "react": "17.0.2",
